--- a/core/igb_service/pom.xml
+++ b/core/igb_service/pom.xml
@@ -31,7 +31,7 @@
         </dependency>        
         <dependency>
             <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.framework</artifactId>
+            <artifactId>org.apache.felix.main</artifactId>
             <scope>provided</scope> 
         </dependency>
         <dependency>
