--- a/plugins/GraphTab/pom.xml
+++ b/plugins/GraphTab/pom.xml
@@ -52,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.framework</artifactId>
+            <artifactId>org.apache.felix.main</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -71,7 +71,7 @@
                     <instructions>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>       
-                        <Import-Package>*;resolution:=optional</Import-Package>
+                        <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
                         <Export-Package/>
                         <Bundle-Category>IGBTabPanel-com.affymetrix.igb.tabs.graph.GraphTrackPanel</Bundle-Category>
                         <Bundle-Activator>com.affymetrix.igb.tabs.graph.Activator</Bundle-Activator>
