--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,32 @@
         <commonsVfsVersion>2.0</commonsVfsVersion>
         <jide.version>3.5.15</jide.version>
     </properties>
+    
+    <repositories>
+        <repository>
+            <id>public</id>
+            <url>http://eos.transvar.org/nexus/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>releases</id>
+            <url>http://eos.transvar.org/nexus/content/repositories/releases</url>
+        </repository>
+        <repository>
+            <id>freehep-maven</id>
+            <url>http://eos.transvar.org/nexus/content/repositories/freehep-maven/</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <url>http://eos.transvar.org/nexus/content/repositories/central/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 	
     <modules>
         <module>core/HeatmapEditor</module>
@@ -93,6 +119,7 @@
             </modules>
         </profile>      
     </profiles>
+    
     
     <dependencyManagement>
         <dependencies>
