--- a/main/pom.xml
+++ b/main/pom.xml
@@ -445,6 +445,14 @@
         <!--End of plugin module dependencies-->
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>JNLP-INF/jnlpTemplate.xml</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
