--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -134,6 +134,7 @@ requestAFeature=Request a Feature or a Shortcut
 documentation=Go to IGB User's Guide
 showConsole=Show Console
 forumHelp=Get Help at IGB Help Forum
+igbSupport=Get help or report a problem
 
 #Open file Menu
 mergeWithCurrentlyLoadedData=Merge with currently-loaded data
