--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <log4jVersion>2.0-rc1</log4jVersion>
         <guavaVersion>16.0.1</guavaVersion>
         <commonsLangVersion>3.1</commonsLangVersion>
-        <commonsCsvVersion>1.0-SNAPSHOT</commonsCsvVersion>
+        <commonsCsvVersion>1.0.-2014-07-16</commonsCsvVersion>
         <commonsIoVersion>2.4</commonsIoVersion>
         <genovizVersion>1.0.3</genovizVersion>
         <felixMainVersion>4.2.2</felixMainVersion>
