Changing the lable text for read sequence genomic sequence

--- a/plugins/SequenceViewer/src/main/resources/sequenceviewer.properties
+++ b/plugins/SequenceViewer/src/main/resources/sequenceviewer.properties
@@ -14,8 +14,8 @@ selectAll = Select All
 showAllPositiveTranslations = All + Translations
 showAllNegativeTranslations = All - Translations
 
-ViewGenomicSequenceInSeqViewer=View Genomic Sequence in Sequence Viewer
-ViewReadSequenceInSeqViewer=View Read Sequence in Sequence Viewer
+ViewGenomicSequenceInSeqViewer=View Genomic Sequence
+ViewReadSequenceInSeqViewer=View Read Sequence
 fastasequence=Save As Fasta
 exportImage=Export Image
 closeSequenceViewer=Close Sequence Viewer
