--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -83,6 +83,16 @@
             <groupId>org.freehep</groupId>
             <artifactId>freehep-graphicsio-svg</artifactId>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>freehep-graphicsio-tests</artifactId>
+                    <groupId>org.freehep</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
