--- a/plugins/SequenceViewer/src/main/resources/sequenceviewer.properties
+++ b/plugins/SequenceViewer/src/main/resources/sequenceviewer.properties
@@ -19,3 +19,5 @@ ViewReadSequenceInSeqViewer=View Read Sequence in Sequence Viewer
 fastasequence=Save As Fasta
 exportImage=Export Image
 closeSequenceViewer=Close Sequence Viewer
+
+errorMessage=An unknown error occurred. Please use the Help menu to contact the IGB support team for assistance.
