--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -100,7 +100,7 @@ setThreshold=Set AutoLoad Threshold to Current View
 unclamp=Unclamp
 reverseComplement=Reverse Complement
 toggleShrinkWrapping=Shrink Wrap Sequence
-toggleHairline=username Zoom Stripe
+toggleHairline=Show Zoom Stripe
 toggleHairlineLabel=Show Zoom Stripe Label
 toggleEdgeMatching=Show Edge Matching
 showIGBTrackMark=Show IGB Track Mark
